# dac-3d_system_v3.0

./: .gitignore  Claude-DAC-3D产业化的软硬件架构设计-FPGA+运动控制卡.md  FILES_INDEX.md  FINAL_DELIVERY.md  PROJECT_COMPLETION.md  PROJECT_SUMMARY.md  README.md  RUN_ME_FIRST.md  START.bat  SYSTEM_SHOWCASE.md  TEST_FINAL.md  UPGRADE_SUMMARY.md  main.py  main_sil.py  pyproject.toml  requirements.txt  requirements_sil.txt  ⚡_重要修复_请先阅读.md  ✅_ALL_TASKS_COMPLETED.md  ✅_最终修复完成.md  快速安装依赖.bat  🎉_START_HERE.md  🎊_完美交付.md  📊_PROJECT_REPORT.md  🔧_依赖问题解决方案.md  🔧_回零Bug修复说明.md  🔧_性能优化修复说明.md  🔧_界面Bug修复说明.md
configs/: devices.yaml  system.yaml
dac3d/: __init__.py
dac3d/core/: __init__.py  event_bus.py  exceptions.py  state_machine.py
dac3d/hal/: __init__.py  interfaces.py
dac3d/hal/camera/: __init__.py  basler_camera.py  camera_array.py
dac3d/hal/fpga/: __init__.py  registers.py  zynq_controller.py
dac3d/hal/motion/: __init__.py  pi_piezo.py  zmotion_stage.py
dac3d/hal/sim/: __init__.py  sim_camera.py  sim_fpga.py  sim_stage.py
dac3d/services/: __init__.py  config_service.py  database_service.py  defect_service.py  scan_service.py
docs/: architecture.md  dataset-management-guide.md
fpga/vivado/src/: encoder_decoder.v  pso_generator.v  pwm_controller.v  timing_ctrl.v  trigger_delay.v
tests/: test_system_integration.py
tests/unit/: test_fpga_controller.py
ui/: __init__.py  main_window.py  main_window_v2.py  well_plate_widget.py
